syntax = "proto3";

option java_package = "proto.video";

message VideoRequest {
    int32 videoId = 1;
}

message VideoChunkResponse {
    bytes data = 1;
}

service VideoService {
    rpc streamVideo(VideoRequest) returns (stream VideoChunkResponse) {}
}